--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -49,7 +49,7 @@ $^{2}$ \quad State Key Laboratory of Advanced Processing and Recycling of Non-fe
 %\conference{} % An extended version of a conference paper
 
 % Abstract (Do not insert blank lines, i.e. \\) 
-\abstract{Cold deformation behavior of poly crystalline metallic material is affected by intrinsic defects such as dislocation, etc.  Existing studies on $\alpha_2(\rm{Ti_3Al})$+$\gamma(\rm{TiAl})$  two phase Ti-Al alloy covers about deformation behavior mainly on macro scale. This paper focus on the cold deformation mechanism of two phase Ti-Al alloy at micro scale, and  the role of void defect in deformation process. Molecular dynamics simulations were performed to study the evolution of micro structure in the material under uniaxial tension. Interaction between spherical nano void with different size and position was also examined in the simulation. The results show that (1) $\gamma$ phase is the major deformation source of the two phase alloy; (2) Void defect detracts the strength of the two phase alloy, however the position of void affect the degree of this subtraction, voids located at the $\alpha_2$/$\gamma$ phase boundary have significant detraction to strength.}
+\abstract{Cold deformation behavior of poly crystalline metallic material is affected by intrinsic defects such as dislocation, void, inclusion etc.  Existing studies on $\alpha_2(\rm{Ti_3Al})$+$\gamma(\rm{TiAl})$  two phase Ti-Al alloy cover about deformation behavior mainly on macro scale. This paper focuses on the cold deformation mechanism of two phase Ti-Al alloy at micro scale, and  the role of void  in deformation process. Molecular dynamics simulations were performed to study the evolution of micro structure of material under uniaxial tension. Interaction between spherical nano void with different size and position was also examined in the simulation. The results show that (1) $\gamma$ phase is the major deformation source of the two phase alloy; (2) Void defect detracts the strength of the two phase alloy, while the position of void affect the degree of this subtraction, voids located at the boundary of $\alpha_2$/$\gamma$ phase have significant detraction to strength.}
 % Keywords
 \keyword{two phase Ti-Al alloy, void, molecular dynamics, cold deformation}
 
@@ -58,9 +58,9 @@ $^{2}$ \quad State Key Laboratory of Advanced Processing and Recycling of Non-fe
 
 \section{Introduction}
 % and brittle rapture failure 
-Titanium  aluminum based intermetallic alloys are promising high temperature structural materials because of their great corrosion resistance and strength at high temperature. Comparing with nickle based alloy,  Ti-Al based alloys have lower density and are pron to be utilized in combustion engine, turbine, and other components work at high temperature ranging from 500 \si{\degreeCelsius} to 900 \si{\degreeCelsius} \cite{Clemens2016}. The performance of inner combustion engine with components made of Ti-6Al-4V was improved  20\% because the weight of components decreased from 30\% to 40\% \cite{Bewlay2016}. With the advancement of non-ferrous metallurgy, Ti-Al based alloy components has better economic efficiency than ever before. Ti-Al based alloys have good prospects for applications in aerospace and automobile industry. 
-Poor ductility of Ti-Al alloy  at room temperature strongly affects the safety of structures like turbo of aircraft engine and combustion generator \cite{Munz2017}. Deformation phenomena of Ti-Al alloys have been widely studied in order to overcome the problems associated with the limited ductility and damage tolerance.  Much of the work has been performed on single phase $\gamma$-TiAl alloys and polysynthetically twinned crystals(PTC)\cite{Appel2016}. Rapture failure at the macroscopic scale can be attributed to abrupt nucleation, growth and propagation of cracks, but at the microscopic scale defects are initially easily formed in the casting process, such as voids and inclusions \cite{Tang2014}. A great number of literatures cover a wide range of factors such as alloy composition, microstructure and deformation temperature,some reports come up with idea that two phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\alpha_2$($\rm Ti_3Al$) alloy \cite{Kim1995}. 
-Void defect can arise due to specific volume differences induced by precipitation or by different thermal expansion or shrinkage upon heating or cooling the specimen. It has been known that nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important \cite{Hempel2017a}. The initiation of crack at microscopic scale is a dynamic process, which resulting in difficulties on study about  mechanisms of deformation and cracking, these defects are known to play a fundamental role in the deformation of materials. Multiscale method have been applied to study deformation behavior of polycrystal with single aluminum \cite{Groh2009} and titanium element respectively \cite{Liu2018}. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale. The effect of void defect is another great concern about properties and deformation mechanism  of TiAl alloy.  Therefore, it is necessary to study the deformation response of intermetallics structural materials with the consideration of microstructure evolution. Previous study on void growth in single crystal $\gamma$-TiAl reveals that void with high volume fraction detracts yield strength, and emission of dislocation \cite{Tang2014, Xu2011}. Evolution of void in ductile polycrystalline was studied in nanoscale with molecular dynamics(MD) simulations, \cite{Jing2018a,Elkhateeb2018}, voids inside material are soures of dislocation and affects the properties of materials differently because of difference in size and position.  The deformation and fracture mechanisms in the duplex microstructure are plasticity induced grain boundary decohesion and cleavage, while those in the lamellar micro-structure are interface delamination and cracking across the lamellar \cite{Tang2014}. It reveals that existence of voids alone may contribute to strain hardening because they are barriers to dislocation movement in ductile fcc structure metal\cite{Xiong2015}. However, few literature covers about deformation mechanism of two phase Ti-Al alloy and the role of void in atomic scale. Defects are inevitable as micro-pores and loosen from casting, and in the actual work environment with radiation. A lot of work carried out on the  effect of various defects on the behavior of different materials, show that point defects may affect the properties of materials greatly. The mechanical performance of irradiated copper is affected by the interaction between irradiation and dislocation \cite{Kiener2011}. Vacancy concentration in single crystal and polycrystal Fe–40 at. Al bulk results in an increase of strength \cite{Yang1998}. Ti-Al alloy is a type of typical brittle material, thus it can be assumed that its properties are sensitive to the existence of void defect. Surface defects such as small notches can caused low and high cycle fatigue strength of the Ti–47Al–2W–0.5Si alloy \cite{Nazmy2001}, and the strength of single crystal $\gamma$-TiAl is also lowered by point defect \cite{Wu2016}. The resistance of Ti–6Al–4V alloy, which was processed for typical fan blade applications, to high-cycle fatigue in the presence of foreign- object damage was markedly reduced due to earlier crack initiation.  The nucleation and subsequent near-threshold growth of crack was primarily affected by the stress concentration associated with the foreign-object damage and the presence of small micro-cracks in the damaged zone. Due to difficulties in observing the dynamic process during deformation wit experiments, MD simulation has become an effective method to investigate micro deformation mechanism. Defects such as grain boundary, void and segregation play a significant role in the process of fracture \cite{Larsen2016}. This paper focus on the evolution of microstructure, tend to find out its connection to cold deformation behavior of two phase TiAl alloy. MD simulation including model creation and analysis method is given in Section \ref{section:method}, Results and discussion are in Section \ref{section:RD}.
+Titanium  aluminum based intermetallic alloys are promising high temperature structural materials because of their great corrosion resistance and strength at high temperature. Compared with nickle based alloy,  Ti-Al based alloys have lower density and are pron to be utilized in combustion engine, turbine, and other components working at high temperature from 500 \si{\degreeCelsius} to 900 \si{\degreeCelsius} \cite{Clemens2016}. The performance of inner combustion engine with components made of Ti-6Al-4V was improved  20\% because the weight of components decreased from 30\% to 40\% \cite{Bewlay2016}. With the advancement of non-ferrous metallurgy, Ti-Al based alloy components have better economic efficiency than ever before. Ti-Al based alloys have good prospects for applications in aerospace and automobile industry. 
+Poor ductility of Ti-Al alloy  at room temperature strongly affects the safety of structures like turbo of aircraft engine and combustion generator \cite{Munz2017}. Deformation phenomena of Ti-Al alloys have been widely studied in order to overcome the problems associated with the limited ductility and damage tolerance.  Much of the work has been performed on single phase $\gamma$-TiAl alloys and polysynthetically twinned crystals(PTC)\cite{Appel2016}. Rapture failure at the macroscopic scale can be attributed to abrupt nucleation, growth and propagation of cracks, but at the microscopic scale defects are initially formed in the casting process, such as voids and inclusions \cite{Tang2014}. A great number of literatures cover a wide range of factors such as alloy composition, microstructure and deformation temperature, some reports come up with the idea that two phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\alpha_2$($\rm Ti_3Al$) alloy \cite{Kim1995}. 
+Void defect can be arose due to specific volume differences induced by precipitation, different thermal expansion or shrinkage upon heating or cooling the specimen. It has been known that nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important \cite{Hempel2017a}. The initiation of crack at microscopic scale is a dynamic process, which results in difficulties on study of  mechanisms about deformation and cracking, these defects are known playing a fundamental role in the deformation of materials. Multiscale method has been applied to study deformation behavior of polycrystal with single aluminum \cite{Groh2009} and titanium element respectively \cite{Liu2018}. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale. The effect of void defect is another great concern about properties and deformation mechanism  of TiAl alloy.  Therefore, it is necessary to study the deformation response of intermetallics structural materials with the consideration of microstructure evolution. Previous study on void growth in single crystal $\gamma$-TiAl reveals that void with high volume fraction detracts yield strength \cite{Tang2014, Xu2011}. Evolution of void in ductile polycrystalline was studied in nanoscale with molecular dynamics(MD) simulations, \cite{Jing2018a,Elkhateeb2018}, voids inside material are soures of dislocation and affects the properties of materials differently because of differences in size and position.  The deformation and fracture mechanisms in the duplex microstructure are plasticity induced grain boundary decohesion and cleavage, while those in the lamellar micro-structure are interface delamination and cracking across the lamellar \cite{Tang2014}. It reveals that existence of voids alone may contribute to strain hardening because they are barriers to dislocation movement in ductile fcc structure metal\cite{Xiong2015}. However, few literature covers about deformation mechanism of two phase Ti-Al alloy and the role of void in atomic scale. Defects are inevitable as micro-pores and loosen from casting, and in the actual work environment with radiation. A lot of work carried out on the  effect of various defects on the behavior of different materials, showing that point defects may affect the properties of materials greatly. The mechanical performance of irradiated copper is affected by the interaction between irradiation and dislocation \cite{Kiener2011}. Vacancy concentration in single crystal and polycrystal Fe–40 at. Al bulk results in an increase of strength \cite{Yang1998}. Ti-Al alloy is a type of typical brittle material, thus it can be assumed that its properties are sensitive to the existence of void defect. Surface defects such as small notches can cause low and high cycle fatigue strength of the Ti–47Al–2W–0.5Si alloy \cite{Nazmy2001}, and the strength of single crystal $\gamma$-TiAl is also lowered by point defect \cite{Wu2016}. The resistance of Ti–6Al–4V alloy, which was processed for typical fan blade applications, to high-cycle fatigue in the presence of foreign- object damage was reduced due to earlier crack initiation.  The nucleation and subsequent near-threshold growth of crack was primarily affected by the stress concentration associated with the foreign-object damage and the presence of small cracks in the damaged zone. Due to difficulties in observing the dynamic process during deformation wit experiments, MD simulation has become an effective method to investigate micro deformation mechanism. Defects such as grain boundary, void and segregation play significant roles in the process of fracture \cite{Larsen2016}. This paper focus on the evolution of microstructure, tending to find out its connection to cold deformation behavior of two phase TiAl alloy. MD simulation including model creation and analysis method is given in Section \ref{section:method}, Results and discussion are in Section \ref{section:RD}.
 
 \section{Molecular Dynamics Simulation }\label{section:method}
 \subsection{Atomic Potential}
@@ -96,7 +96,7 @@ where $E_{total}$ is the total energy of the system, $\rho_{h,i}$, is the host e
 	\label{tab:lattice_parameter}
 \end{table} 
 
-Two phase Ti-Al alloy is composed of $\gamma $-TiAl and $\alpha_2$-$\rm Ti_3Al$ has a fcc type cell with an $L1_0$ structure, and $\alpha_2$-$\rm Ti_3Al$ has a hcp structure, these two types of initial cells are shown in Fig. \ref{fig:tial-cell}, constructing parameters of the two type of unit cell are given by table \ref{tab:lattice_parameter}. Periodic boundary conditions (PBC) are applied along all three directions, that makes polycrystal with periodic nanovoid structures. The initial dimension of simulation cell is $L_x =200$ \si{\angstrom}, $L_y = $180\si{\angstrom}, $L_z = 210$ \si{\angstrom}, and each model contains about 460,000 atoms. The grain orientation and size were randomly created with Voronoi method by code ATOMSK \cite{Hirel2015}, and resulting in the arbitrary shape and orientation of the grains. Uniaxial load was applied to the model at a strain rate of $5\times10^8\ \rm{s}^{-1}$. 
+Two phase Ti-Al alloy is composed of $\gamma $-TiAl and $\alpha_2$-$\rm Ti_3Al$ has a fcc type cell with an $L1_0$ structure, and $\alpha_2$-$\rm Ti_3Al$ has a hcp structure, these two types of initial cells are shown in Fig. \ref{fig:tial-cell}, constructing parameters of the two type of unit cell are given by table \ref{tab:lattice_parameter}. Periodic boundary conditions (PBC) are applied along three directions, which makes polycrystal with periodic nanovoid structures. The initial dimension of simulation cell is $L_x =200$ \si{\angstrom}, $L_y = $180\si{\angstrom}, $L_z = 210$ \si{\angstrom}, and each model contains about 460,000 atoms. The grain orientation and size were randomly created with Voronoi method by code ATOMSK \cite{Hirel2015}, and resulting in the arbitrary shape and orientation of the grains. Uniaxial load was applied to the model at a strain rate of $5\times10^8\ \rm{s}^{-1}$. 
 % In order to study the deformation mechanism of the two phase alloy and the effect of void defect, three types of models were created: Type-1.model without any void defect; Type-2. models with different size void inside $\alpha_2$ phase; Type-3. models with void at $\alpha_2-\gamma$ interface. \ref{tab:lattice_parameter}. The simulation cells of two phase polycrystalline with an initially spherical void at different position are shown in figure .
 \subsection{Analysis method}
 In order to identify typical defects in the deformed model, a hybrid analysis method was used with free code ovito\cite{Stukowski2010a}.Dislocation is visualized by DXA method, and Centro-symmetry parameter(CSP) is used to tell grain boundary from  $\alpha_2$ phase and $\gamma$ phase. The definition of CSP is as following:
@@ -119,9 +119,9 @@ where $\vec{R_i}$ and ${\vec{R}}_{i+6}$ are the vectors corresponding to the six
 
 %	/home/alex/Documents/violet/draft/img/perfect-line.pdf
 Deformation process of the model without void defect is shown in Fig. \ref{fig:deformation-pf}. The strength of the model without void defect is 5.3 GPa. According to stress response under constant rate of strain rate, the whole tensile process can be divided into four stages: 
-stage - \uppercase\expandafter{\romannumeral1}: elastic stage, ranging from $\epsilon = 0$ to $\epsilon = 0.092$, including key point 1,
+stage - \uppercase\expandafter{\romannumeral1}: elastic stage, from $\epsilon = 0$ to $\epsilon = 0.092$, including key point 1,
 stage - \uppercase\expandafter{\romannumeral2}: yield stage, ranging from $\epsilon = 0.092$ to $\epsilon = 0.101$, including key points 2 to 6,
-stage - \uppercase\expandafter{\romannumeral3}: cracking stage, ranging from $\epsilon = 0.101$ to $\epsilon = 0.112$, including key pint 7 to 10,
+stage - \uppercase\expandafter{\romannumeral3}: cracking stage, ranging from $\epsilon = 0.101$ to $\epsilon = 0.112$, including key point 7 to 10,
 stage - \uppercase\expandafter{\romannumeral4}: fracture stage. Following discussion concentrates on deformation phenomena that rely on the elastro-plastic codeformation of the $\gamma$ and $\alpha_2$ phases and on the particular point defect situation occurring in two phase alloys. 
 
 \begin{table}[ht]
@@ -146,7 +146,7 @@ stage - \uppercase\expandafter{\romannumeral4}: fracture stage. Following discus
 
 % Due to this effect ( $\alpha_2$ + $\gamma$ ) alloys exhibit some remarkable properties that are unlike those of either constituent.
 \subsection{Deformation Mechanism of Two Phase TiAl Alloy without Void Defects}
-Snapshots of atom configuration at the 3 of 10 key points are shown by Fig. \ref{fig:Defect}.  Atoms with ordered configuration  of $\gamma$ phase grains have been removed in Fig. \ref{fig:Defect}(a) and (b),\ $\alpha_2$ phase and defects inside grains have been left. Similarly, $\gamma$ phase grain have been removed in Fig. \ref{fig:Defect}(c) and (d), the defects of $\alpha_2$ phase have been left.  The results show that, at stage \uppercase\expandafter{\romannumeral1}, the structure of material is under typical elastic deformation and the size of simulation box enlarged due to the loading, deformation of the two phase are compatible. Emission of dislocation and evolution of defects initiated at the end of stage \uppercase\expandafter{\romannumeral1}. A  great number of dislocation emitted inside $\gamma$ phase at earlier part of stage \uppercase\expandafter{\romannumeral2}, however, the dislocation inside $\alpha_2$ phase was emitted at the end of stage \uppercase\expandafter{\romannumeral2} shown by Fig. \ref{fig:Defect}(c).  
+Snapshots of atom configuration at the 3 of 10 key points are shown by Fig. \ref{fig:Defect}.  Atoms with ordered configuration  of $\gamma$ phase grains have been removed in Fig. \ref{fig:Defect}(a) and (b),\ $\alpha_2$ phase and defects inside grains have been left. Similarly, $\gamma$ phase grain have been removed in Fig. \ref{fig:Defect}(c) and (d), the defects of $\alpha_2$ phase have been left.  The results show that, at stage \uppercase\expandafter{\romannumeral1}, the structure of material is under typical elastic deformation, the size of simulation box enlarged due to the loading. In this stage, deformation of the two phase are compatible. Emission of dislocation and evolution of defects initiated at the end of stage \uppercase\expandafter{\romannumeral1}. A  great number of dislocation emitted inside $\gamma$ phase at earlier part of stage \uppercase\expandafter{\romannumeral2}, however, the dislocation inside $\alpha_2$ phase was emitted at the end of stage \uppercase\expandafter{\romannumeral2} is shown by Fig. \ref{fig:Defect}(c).  
 \begin{figure}[ht] 
 	\centering
 	\includegraphics[width=1\linewidth]{img/def-box}
@@ -157,7 +157,7 @@ Experiments have shown that the velocity of dislocation motion is sensitive to s
 \begin{equation}\label{eq:temp-dis}
 v = v_0\ e^{-\Delta H(\tau^*)/kT}
 \end{equation}
-where the prefactor $v_0$ gives the velocity that would be obtained for each potential mobility, $L$ represents the free length of screw character of dislocation, $\Delta H(\tau^*)$ is activation enthalpy determined by loading conditions. The effect of temperature on the mobility can be evaluated under different loading conditions, thus we chose  $\tau_1^*>\tau_2^*>\tau_3^*$ in formulation (\ref{eq:temp-dis}), normalized velocity of dislocation motion is shown by Fig. \ref{fig:temp}. The  velocity  of dislocation movement rise along with increase of  stress, the mobility  of dislocation is relatively poor at 298 K. Due to motion of dislocation is inactive inside $\alpha_2$ phase, piling up of dislocations, the typical strengthening mechanism closely related with interaction between grain boundary and dislocation can not be dramatic at room temperature. That is in good agreement with simulation results shown by in Fig. \ref{fig:Defect}, there was few dislocation piling up at near boundaries.
+where the prefactor $v_0$ gives the velocity that would be obtained for each potential mobility, $L$ represents the free length of screw character of dislocation, $\Delta H(\tau^*)$ is activation enthalpy determined by loading conditions. The effect of temperature on the mobility can be evaluated under different loading conditions, thus we chose  $\tau_1^*>\tau_2^*>\tau_3^*$ in formulation (\ref{eq:temp-dis}), normalized velocity of dislocation motion is shown by Fig. \ref{fig:temp}. The  velocity  of dislocation movement rise along with increase of  stress, the mobility  of dislocation is relatively poor at 298 K. Due to motion of dislocations is inactive inside $\alpha_2$ phase,  typical strengthening mechanism closely related with interaction between grain boundary and dislocation can not be dramatic at room temperature, piling up of dislocations is not observed in this simulation, which is shown in Fig. \ref{fig:Defect}.
 \begin{figure}[ht]
 	\centering
 	\begin{minipage}{0.495\textwidth}
@@ -175,7 +175,7 @@ where the prefactor $v_0$ gives the velocity that would be obtained for each pot
 	\end{minipage}
 \end{figure}
 
-Length of different types of dislocations are given at four stages in Fig. \ref{fig:disum}. Dislocations are recognized and identified using the dislocation analysis (DXA) of OVITO. The length of Shorckley dislocation with Burgers vector $1/6[1 1 2]$ increase sharply during yield stage of the deformation process in Fig. \ref{fig:disum}, but the length of perfect dislocation fluctuate at a low level. Decomposition of the perfect  dislocations split into Shockley partial dislocations as formulation (\ref{eq:dis-1}) and (\ref{eq:dis-2}). The structure spontaneously transform into intrinsic stacking fault (ISF), it can be observed in Fig. \ref{fig:Defect}(a). 
+Length of different types of dislocations are given at four stages in Fig. \ref{fig:disum}. Dislocations are recognized and identified using the dislocation analysis (DXA) of ovito. The length of Shorckley dislocation with Burgers vector $1/6[1 1 2]$ increased sharply during yield stage of the deformation process in Fig. \ref{fig:disum}, but the length of perfect dislocation fluctuated at a low level. Perfect  dislocations split into Shockley partial dislocations, this decomposition process  can be given by formulation (\ref{eq:dis-1}) and (\ref{eq:dis-2}). The structure spontaneously transformed into intrinsic stacking fault (ISF), which can be observed in Fig. \ref{fig:Defect}(a). 
 
 %\begin{equation}\label{eq:dis-1}
 %[\ 0\ 1\ \overline{1}\ ] \to 1/2 [\ 1\ 1\ \overline{2}\ ]+1/2[\ \overline{1}\ 1\ 0\ ]\\
@@ -187,13 +187,13 @@ Length of different types of dislocations are given at four stages in Fig. \ref{
 \begin{equation}\label{eq:dis-2}
 1/2 [\ 1\ 0\ \overline{1}\ ] \to 1/6 [\ 1\ 1\ \overline{2}\ ] + 1/6[\ 2\ \overline{1}\ \overline{1}\ ]
 \end{equation}
-Interaction between dislocation with Burgers vector of $1/6 [112] $ and $ 1/6 [11\overline{2}]$ follows the decomposition of perfect dislocation. The process produce leading dislocation and a trailing dislocation, when the two leading Shockley partials combine, they form Lomer–Cottrell junction, a separate dislocation. It's sessile and immobile in the slip plane, plays a role of barrier against other dislocations in the plane. This process can be given by :
+Interaction between dislocations with Burgers vector of $1/6 [112] $ and $ 1/6 [11\overline{2}]$ follows the decomposition of perfect dislocation. The process produced leading dislocation and trailing dislocation, when the two leading Shockley partials combined, they form Lomer–Cottrell junction, a separate dislocation. It's sessile in the slip plane, playing a role of barrier against other dislocations in the plane. This process is given by :
 \begin{equation}\label{eq:dis-3}
 1/6 [\ 1\ 1\ 2\ ] + 1/6 [\ 1\ 1\  \overline{2}\ ] \to 1/3 [\ 1\ 1\ 0\ ]
 \end{equation}
-According to results calculated by first principle, the stacking faulting energy for TiAl is much smaller than $\rm{Ti_3Al}$, as a consequence calculated shear strength of TiAl and $Ti_3Al$is 4.1 Gpa and 2.86 Gpa along their easy slip plane respectively\cite{Liu2007}. This calculation reveals that tensile behaviour in single crystal is mainly controlled by the type of the structure. However, in two phase Ti-Al alloy, deformation of $\alpha_2$ phase is earlier than $\gamma$ phase during yield stage, thus local displacement of two phases are incompatible during yield stage.  Mobility of dislocation is affected by structure of crystal, loading condition and temperature. $\alpha_2$ phase is made up of hcp  structured grain, grain with this type of structure possess less slip system compering with grain with fcc structure \cite{Zhu2012}, thus $\alpha_2$ phase is difficult do be deformed under uniaxial tensile loading. 
+According tothe  results calculated by first principle, the stacking fault energy of TiAl is much smaller than $\rm{Ti_3Al}$, as a consequence, calculated shear strength of TiAl and $\rm{Ti_3Al}$is 4.1 Gpa and 2.86 Gpa along their easy slip plane respectively\cite{Liu2007}. This calculation reveals that tensile behaviour in single crystal is mainly controlled by the type of the structure. However, in two phase Ti-Al alloy, deformation of $\alpha_2$ phase is earlier than $\gamma$ phase during yield stage, thus local displacement of two phases are incompatible during yield stage.  Mobility of dislocation is affected by structure of crystal, loading condition and temperature. And $\alpha_2$ phase is made up of hcp  structured grain, grains with this type of structure possess less slip system compared with grain with fcc structure \cite{Zhu2012}, thus $\alpha_2$ phase is difficult do deform under uniaxial tensile loading. 
 
-Main reason for the unequal strain partitioning between the $\alpha_2$ and $\gamma$ phase is certainly the strong plastic anisotropy of the $\alpha_2$ phase. TEM examinations performed on tensile tested lamellar alloys have revealed that the limited plasticity of the $\alpha_2$ phase is carried by local slip of <a>-type dislocations with the Burgers vector $b=1/3[11\overline{2}0]$ prism planes shown by Fig. \ref{fig:Defect}(b), which is by far the easiest slip system in $\alpha_2$ single crystals.  The core of a dislocation intersecting an interface often needs to be transformed. For example, an ordinary 1/2 [110] dislocation gliding in one $\gamma$ grain has to be converted into a $[101]$ super dislocation with the double Burgers vector gliding in an adjacent $\gamma$ grain. At the $\alpha_2/\gamma$ interface, dislocations existing in the $D0_{19}$ structure have to be transformed into dislocations consistent with the $\rm{L1_0}$ structure. These core transformations are associated with a change of the dislocation line energy because the lengths of Burgers vectors and the shear module are different. Dislocations crossing semi-coherent boundaries have to intersect the misfit dislocation, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface. When slip is forced to cross $\alpha_2$ phase, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
+Main reason for the unequal strain partitioning between the $\alpha_2$ and $\gamma$ phase is  the strong plastic anisotropy of  $\alpha_2$ phase. TEM examinations performed on tensile tested lamellar alloys have revealed that the limited plasticity of  $\alpha_2$ phase is carried by local slip of dislocations with the Burgers vector $1/3[11\overline{2}0]$ prism planes shown by Fig. \ref{fig:Defect}(b), which is by far the easiest slip system in $\alpha_2$ single crystals.  Dislocation neighboring interfaces often needs to be transformed. For example, an ordinary 1/2 [110] dislocation gliding in one $\gamma$ grain has to be converted into $[101]$ super dislocation when the double Burgers vectors gliding in an adjacent $\gamma$ grain. At the $\alpha_2/\gamma$ interface, dislocations existing in  $D0_{19}$ structure  transform into dislocations, which is consistent with the $\rm{L1_0}$ structure. These core transformations are associated with the change of the dislocation line energy because of the differences of the length and the shear module.  Pyramidal slip of the $\alpha_2$ phase is required, when slip is forced to cross $\alpha_2$ phase, this process needs an extremely high shear stress.
 
 
 \subsection{The effect of void on the strength of material}
@@ -237,7 +237,7 @@ where $\sigma_0$ is the strength of model without void defects 5.3 Gpa, and $A_0
 %	\label{fig:yield}
 %\end{figure}
 	
-It has been observed in Fig. \ref{fig:strength} that voids detracts the strengths of  material. The max stress  of the simulation cell decreases as the volume of voids are larger. From Fig. \ref{fig:stress&strain}, there is a critical value of void radius about 15 \AA, the void greater than 15 \AA\ cause serious detraction of strength of material.  The decrease rate of loading area are smaller comparing with the detraction of strength, so it can be assumed that the  yield behavior and strength is much more related with local behavior of grain boundaries and void. Grain and phase boundaries are obstacles to deformation process, thus the stability of boundaries have great impact on the strength of materials. Interactive between grain boundary and void determines the fracture mode of the TiAl alloy.
+It has been observed in Fig. \ref{fig:strength} that voids detracts the strengths of  material. The max stress  of the simulation cell decreases as the volume of voids are larger. From Fig. \ref{fig:stress&strain}, there is a critical value of void radius about 15 \AA, the void greater than 15 \AA\ cause serious detraction of strength of material.  The decrease rate of loading area are smaller  with the detraction of strength, so it can be assumed that the  yield behavior and strength is much more related with local behavior of grain boundaries and void. Grain and phase boundaries are obstacles to deformation process, thus the stability of boundaries have great impact on the strength of materials. Interactive between grain boundary and void determines the fracture mode of the TiAl alloy.
 
 
 
